--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,12 @@
 <h1>Display your Pirate here</h1>
+  <p>Name: <%= @pirate.name %></p>
+  <p>Weight: <%= @pirate.weight %> pounds</p>
+  <p>Height: <%= @pirate.height %> inches</p>
 
 
-<h2>Display your first ship here</h2>
+<h2>Display your ships here</h2>
+  <% @ships.each do |ship| %>
+  <p>Name: <%= ship.name %></p>
+  <p>Type: <%= ship.type %></p>
+  <p>Booty: <%= ship.booty %></p>
 
-
-<h2>Display your second ship here</h2>
