--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,13 +1,13 @@
 <h1>Make your form here</h1>
 <form action="/pirates" method="post">
-  Pirate Name: <input type="text" name="pirate[name]">
-  Pirate Weight: <input type="text" name="pirate[weight]">
-  Pirate Height: <input type="text" name="pirate[height]">
-  Ship Name: <input type="text" name="pirate[ships][][name]">
-  Ship Type: <input type="text" name="pirate[ships][][type]">
-  Ship Booty: <input type="text" name="pirate[ships][][booty]">
-  Ship Name: <input type="text" name="pirate[ships][][name]">
-  Ship Type: <input type="text" name="pirate[ships][][type]">
-  Ship Booty: <input type="text" name="pirate[ships][][booty]">
-  <input type="submit">
+<p>Pirate name: <input type="text" name="pirate[name]"</p>
+  <p>Pirate weight: <input type="text" name="pirate[weight]"</p>
+  <p>Pirate height: <input type="text" name="pirate[height]"</p>
+  <p>Ship name: <input id="ship_name_1" type="text" name="pirate[ships][][name]"</p>
+  <p>Ship type: <input id="ship_type_1" type="text" name="pirate[ships][][type]"</p>
+  <p>Ship booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"</p>
+  <p>Ship name: <input id="ship_name_2" type="text" name="pirate[ships][][name]"</p>
+  <p>Ship type: <input id="ship_type_2" type="text" name="pirate[ships][][type]"</p>
+  <p>Ship booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"</p>
+  <button type="submit" value="submit">Submit</button>
 </form>
