Automatically backed up by Learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -4,8 +4,12 @@
   <p>Height: <%= @pirate.height %> inches</p>
 
 
-<h2>Display your ships here</h2>
-  <% @ships.each do |ship| %>
-  <p>Name: <%= ship.name %></p>
-  <p>Type: <%= ship.type %></p>
-  <p>Booty: <%= ship.booty %></p>
+  <h2>Display your second ship here</h2>	
+   <p>Name: <%= @ships[0].name %></p>
+   <p>Type: <%= @ships[0].type %></p>
+   <p>Booty: <%= @ships[0].booty %></p>
+ 
+  <h2>Display your second ship here</h2>
+   <p>Name: <%= @ships[1].name %></p>
+   <p>Type: <%= @ships[1].type %></p>
+   <p>Booty: <%= @ships[1].booty %></p>
